--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/native": "^7.0.14",
     "@tamagui/babel-plugin": "^1.121.7",
     "@tamagui/config": "^1.121.7",
+    "@tamagui/lucide-icons": "^1.121.7",
+    "@tanstack/react-query": "^5.62.16",
     "expo": "~52.0.23",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -41,7 +43,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "tamagui": "^1.121.7"
+    "tamagui": "^1.121.7",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
