feat: Add basic debug release script and tidy project
Added a basic debug release script to streamline the debugging process and made improvements to the overall project structure for better maintainability.

- Files changed:
  - scripts/debug-release.sh (new file)
  - package.json
  - README.md

Implementation reason: The addition of a debug release script enhances the development workflow by providing a straightforward way to create debug builds. Tidying up other parts of the project improves code organization and readability, facilitating easier collaboration and future development.

--- a/app.json
+++ b/app.json
@@ -36,6 +36,18 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "c6b379b5-5276-4593-ad28-e83df954169e"
+      }
+    },
+    "owner": "devular",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/c6b379b5-5276-4593-ad28-e83df954169e"
     }
   }
 }
