--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest --watchAll",
     "lint": "expo lint",
     "lint:biome": "biome lint .",
-    "release:debug": "node ./scripts/release-debug.js"
+    "release:debug": "npm run lint:biome && node ./scripts/release-debug.js"
   },
   "jest": {
     "preset": "jest-expo"
