feat(test): Add Maestro testing and update README
Added Maestro testing framework to automate UI interactions and assertions for the Swipe Guide Test App. Updated the README to include instructions for running tests with Maestro.

Implementation reason: Enhancing the app's testing capabilities ensures that the UI functions as expected, improving reliability and user experience.

- Files changed:
  - .maestro/test.yaml
  - README.md

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
+    "test": "maestro test .maestro/test.yaml",
     "lint": "expo lint",
     "lint:biome": "biome lint .",
-    "release:debug": "npm run lint:biome && node ./scripts/release-debug.js"
+    "release:debug": "npm run lint:biome && npm run test && node ./scripts/release-debug.js",
+    "build:ios:local": "eas build --profile development-simulator --platform ios --local" 
   },
   "jest": {
     "preset": "jest-expo"
